# RotorTM

./: .gitignore  README.md  build_output.txt
rotor_tm_config/config/attach_mechanism/cable/: 3_robots_triangular_payload_0-5m.yaml
rotor_tm_control/src/rotor_tm_control/: controller.py  controller_node.py
rotor_tm_sim/: .gitignore  CMakeLists.txt  dronecable.py  package.xml
rotor_tm_sim/gtest/: testCable.cpp  testCooperative.cpp  testCooperative1MAV.cpp  testCooperative3MAVs.cpp  testCooperative4MAVs.cpp  testPayload.cpp  testPayloadClass.cpp  testQuadrotor.cpp  testQuadrotorClass.cpp  testQuadrotorPoinmass.cpp  testRigidBodyClass.cpp  testUAVCable.cpp
rotor_tm_sim/include/rotor_tm_sim/: lib_attachpoint.hpp  lib_base.hpp  lib_cable.hpp  lib_cooperative.hpp  lib_joint.hpp  lib_payload.hpp  lib_pointmass.hpp  lib_pointmass_dynamic_simulator.hpp  lib_quadrotor copy.hpp  lib_quadrotor.hpp  lib_quadrotor_dynamic_simulator.hpp  lib_quadrotor_pointmass.hpp  lib_rigidbody.hpp  lib_ros_simulator.hpp  lib_uav_cable.hpp
rotor_tm_sim/include/rotor_tm_sim/base/: lib_base.hpp  lib_cable.hpp  lib_rigidbody.hpp
rotor_tm_sim/launch/: CXX_Cooperative.launch  editable_launch.launch  rviz_CXX.rviz  rviz_test.launch  rviz_test.rviz  test_CXXSimulator.launch  test_DronePointMass copy.launch  test_DronePointMass.launch
rotor_tm_sim/rostest/: ros_cooerative.cpp
rotor_tm_sim/src/rotor_tm_sim/: lib_pointmass_dynamic_simulator.cpp  lib_quadrotor_dynamic_simulator.cpp  lib_quadrotor_pointmass.cpp  lib_ros_simulator.cpp  main.cpp  node_cooperative.cpp  ptmass.py  rotorTM_node.cpp  rotorTM_node_drone_pointmass.cpp  runsim.py  simulation_base.py  simulation_base_new.py  tm_motor_control.py
rotor_tm_sim/src/rotor_tm_sim/lib/: lib_attachpoint.cpp  lib_cable.cpp  lib_cooperative.cpp  lib_joint.cpp  lib_payload.cpp  lib_pointmass.cpp  lib_quadrotor.cpp  lib_quadrotor_dynamic_simulator.cpp  lib_quadrotor_pointmass.cpp  lib_rigidbody.cpp  lib_uav_cable.cpp
rotor_tm_sim/src/rotor_tm_sim/lib/base/: lib_cable.cpp  lib_pointmass.cpp  lib_quadrotor copy.cpp  lib_rigidbody.cpp
rotor_tm_utils/src/rotor_tm_utils/: read_params.py
